--- a/Adding_NCI60/compare_nsc_gi50_vs_chem_names.ipynb
+++ b/Adding_NCI60/compare_nsc_gi50_vs_chem_names.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "56220\n",
-      "67534\n"
+      "GI50 has 56220 unique NSC number\n",
+      "All chem names 67534 unique NSC number\n"
      ]
     }
    ],
@@ -95,9 +95,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered chem names has shape (39120, 3)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -155,65 +162,20 @@
        "      <td>2-Methylquinone</td>\n",
        "      <td>Chemical Name</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251882</th>\n",
-       "      <td>761431</td>\n",
-       "      <td>PLX4032</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251883</th>\n",
-       "      <td>761431</td>\n",
-       "      <td>RG7204</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251884</th>\n",
-       "      <td>761432</td>\n",
-       "      <td>Cabazitaxel</td>\n",
-       "      <td>USAN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251885</th>\n",
-       "      <td>761432</td>\n",
-       "      <td>JEVTANA</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>251886</th>\n",
-       "      <td>761432</td>\n",
-       "      <td>XRP6258</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>39120 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           NSC             Name      Name Type\n",
-       "0            1     Tolylquinone  Chemical Name\n",
-       "1            1    p-Toluquinone  Chemical Name\n",
-       "2            1    Methylquinone  Chemical Name\n",
-       "3            1  1,4-Toluquinone  Chemical Name\n",
-       "4            1  2-Methylquinone  Chemical Name\n",
-       "...        ...              ...            ...\n",
-       "251882  761431          PLX4032  Chemical Name\n",
-       "251883  761431           RG7204  Chemical Name\n",
-       "251884  761432      Cabazitaxel           USAN\n",
-       "251885  761432          JEVTANA  Chemical Name\n",
-       "251886  761432          XRP6258  Chemical Name\n",
-       "\n",
-       "[39120 rows x 3 columns]"
+       "   NSC             Name      Name Type\n",
+       "0    1     Tolylquinone  Chemical Name\n",
+       "1    1    p-Toluquinone  Chemical Name\n",
+       "2    1    Methylquinone  Chemical Name\n",
+       "3    1  1,4-Toluquinone  Chemical Name\n",
+       "4    1  2-Methylquinone  Chemical Name"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,27 +183,8 @@
    "source": [
     "filtered_names = chem_names.loc[chem_names[\"NSC\"].isin(gi50_chem_names)]\n",
     "print(f\"Filtered chem names has shape {filtered_names.shape}\")\n",
-    "filtered_names.to_csv(path_join(\"data\", \"filtered_chemnames_Aug2013.csv\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.765937388829598"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(only_gi50) / len(all_gi50_nsc)"
+    "filtered_names.to_csv(path_join(\"data\", \"filtered_chemnames_Aug2013.csv\"))\n",
+    "filtered_names.head()"
    ]
   }
  ],
