--- a/Adding_NCI60/compare_nsc_gi50_vs_chem_names.ipynb
+++ b/Adding_NCI60/compare_nsc_gi50_vs_chem_names.ipynb
@@ -20,7 +20,8 @@
      "output_type": "stream",
      "text": [
       "GI50 has shape (4547757, 14)\n",
-      "Chem names has shape (251887, 3)\n"
+      "Chem names has shape (251887, 3)\n",
+      "PubChem NSC (3729858, 3)\n"
      ]
     }
    ],
@@ -32,8 +33,11 @@
     "    header=None,\n",
     "    names=[\"NSC\", \"Name\", \"Name Type\"],\n",
     ")\n",
+    "pubchem_chem_names = pd.read_csv(path_join(\"nsc_from_pubchem\", \"results\", \"nsc2synonym.csv\"))\n",
+    "\n",
     "print(f\"GI50 has shape {GI50.shape}\")\n",
-    "print(f\"Chem names has shape {chem_names.shape}\")"
+    "print(f\"Chem names has shape {chem_names.shape}\")\n",
+    "print(f\"PubChem NSC {pubchem_chem_names.shape}\")"
    ]
   },
   {
@@ -43,7 +47,8 @@
    "outputs": [],
    "source": [
     "all_gi50_nsc = GI50[\"NSC\"].unique()\n",
-    "all_chem_names_nsc = chem_names[\"NSC\"].unique()"
+    "all_chem_names_nsc = chem_names[\"NSC\"].unique()\n",
+    "all_pubchem_nsc = pubchem_chem_names[\"NSC\"].unique()"
    ]
   },
   {
@@ -56,13 +61,15 @@
      "output_type": "stream",
      "text": [
       "GI50 has 56220 unique NSC number\n",
-      "All chem names 67534 unique NSC number\n"
+      "Chem names 2013 has 67534 unique NSC number\n",
+      "Pubchem has 296385 unique NSC number\n"
      ]
     }
    ],
    "source": [
     "print(f\"GI50 has {all_gi50_nsc.size} unique NSC number\")\n",
-    "print(f\"All chem names {all_chem_names_nsc.size} unique NSC number\")"
+    "print(f\"Chem names 2013 has {all_chem_names_nsc.size} unique NSC number\")\n",
+    "print(f\"Pubchem has {all_pubchem_nsc.size} unique NSC number\")"
    ]
   },
   {
@@ -94,6 +101,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "But comparing it to pubchem NSC number we only find 2.3% to be missed. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -102,89 +116,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered chem names has shape (39120, 3)\n"
+      "GI50 has 1269 number not in pubchem\n",
+      "A total of 54951 NSC numbers are in both\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "only_gi50 = list(set(all_gi50_nsc) - set(all_pubchem_nsc))\n",
+    "print(f\"GI50 has {len(only_gi50)} number not in pubchem\")\n",
+    "gi50_chem_names = list(set(all_gi50_nsc) - set(only_gi50))\n",
+    "print(f\"A total of {len(gi50_chem_names)} NSC numbers are in both\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Combine the two list even reduces it to 1.3%"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GI50 has 736 number not in chem names or pubchem\n",
+      "A total of 55484 NSC numbers are in both\n"
+     ]
+    }
+   ],
+   "source": [
+    "only_gi50 = list(set(all_gi50_nsc) - set(all_chem_names_nsc) - set(all_pubchem_nsc))\n",
+    "print(f\"GI50 has {len(only_gi50)} number not in chem names or pubchem\")\n",
+    "gi50_chem_names = list(set(all_gi50_nsc) - set(only_gi50))\n",
+    "print(f\"A total of {len(gi50_chem_names)} NSC numbers are in both\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>NSC</th>\n",
-       "      <th>Name</th>\n",
-       "      <th>Name Type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Tolylquinone</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>p-Toluquinone</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Methylquinone</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1,4-Toluquinone</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2-Methylquinone</td>\n",
-       "      <td>Chemical Name</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   NSC             Name      Name Type\n",
-       "0    1     Tolylquinone  Chemical Name\n",
-       "1    1    p-Toluquinone  Chemical Name\n",
-       "2    1    Methylquinone  Chemical Name\n",
-       "3    1  1,4-Toluquinone  Chemical Name\n",
-       "4    1  2-Methylquinone  Chemical Name"
+       "[811013,\n",
+       " 811014,\n",
+       " 811015,\n",
+       " 114696,\n",
+       " 782346,\n",
+       " 378895,\n",
+       " 378896,\n",
+       " 641053,\n",
+       " 641054,\n",
+       " 641055]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filtered_names = chem_names.loc[chem_names[\"NSC\"].isin(gi50_chem_names)]\n",
-    "print(f\"Filtered chem names has shape {filtered_names.shape}\")\n",
-    "filtered_names.to_csv(path_join(\"data\", \"filtered_chemnames_Aug2013.csv\"))\n",
-    "filtered_names.head()"
+    "only_gi50[:10]"
    ]
   }
  ],
